--- a/about.html
+++ b/about.html
@@ -48,24 +48,24 @@
 
   <main class="team-section">
     <article>
-      <img src="images/edwin.jpg" alt="Edwin Photo" />
+      <img src="images/edwin.jpeg" alt="Edwin Photo" />
       <h3>Edwin Teo Yuan Jing</h3>
       <p>Front-End Developer (Visitor Role)</p>
       <p>Student ID: 1231203190</p>
     </article>
 
     <article>
-      <img src="images/member2.jpg" alt="Member 2 Photo" />
-      <h3>[Member 2 Name]</h3>
+      <img src="images/zunyi.jpg" alt="Member 2 Photo" />
+      <h3>CHAN ZUN YI</h3>
       <p>UI/UX Designer (Customer Role)</p>
-      <p>Student ID: [Member 2 ID]</p>
+      <p>Student ID: 1231201459</p>
     </article>
 
     <article>
-      <img src="images/member3.jpg" alt="Member 3 Photo" />
-      <h3>[Member 3 Name]</h3>
+      <img src="images/soonkit.jpg" alt="Member 3 Photo" />
+      <h3>WONG SOON KIT</h3>
       <p>Admin Page Developer (Admin Role)</p>
-      <p>Student ID: [Member 3 ID]</p>
+      <p>Student ID: 1231201251</p>
     </article>
   </main>
 
