--- a/products.html
+++ b/products.html
@@ -73,7 +73,7 @@
     <p>Fragrant pandan cake layered with gula melaka syrup.</p>
     <p><strong>RM 85</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Pandan Gula Melaka" data-price="85" data-desc="pandan gula melaka traditional"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Pandan Gula Melaka" data-price="85" data-desc="pandan gula melaka traditional">Add to Cart</button>
   </article>
 
   <article class="product-card" data-name="Red Velvet Delight" data-desc="red velvet cream cheese">
@@ -82,7 +82,7 @@
     <p>Moist red velvet cake layered with smooth cream cheese frosting.</p>
     <p><strong>RM 95</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Red Velvet Delight" data-price="95" data-desc="red velvet cream cheese"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Red Velvet Delight" data-price="95" data-desc="red velvet cream cheese">Add to Cart</button>
   </article>
 
   <article class="product-card" data-name="Tiramisu Classic" data-desc="espresso mascarpone dessert">
@@ -91,7 +91,7 @@
     <p>Layered dessert with espresso-soaked sponge and mascarpone cream.</p>
     <p><strong>RM 98</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Tiramisu Classic" data-price="98" data-desc="espresso mascarpone dessert"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Tiramisu Classic" data-price="98" data-desc="espresso mascarpone dessert">Add to Cart</button>
   </article>
 
   <article class="product-card" data-name="Mango Mousse Cake" data-desc="light mango mousse tropical">
@@ -100,7 +100,7 @@
     <p>Light and airy mango mousse layered over sponge cake base.</p>
     <p><strong>RM 88</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Mango Mousse Cake" data-price="88" data-desc="light mango mousse tropical"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Mango Mousse Cake" data-price="88" data-desc="light mango mousse tropical">Add to Cart</button>
   </article>
 
   <article class="product-card" data-name="Blueberry Crumble" data-desc="blueberry crumb topping">
@@ -109,7 +109,7 @@
     <p>Sweet and tart blueberry filling with buttery crumble topping.</p>
     <p><strong>RM 75</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Blueberry Crumble" data-price="75" data-desc="blueberry crumb topping"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Blueberry Crumble" data-price="75" data-desc="blueberry crumb topping">Add to Cart</button>
   </article>
 
   <article class="product-card" data-name="Carrot Walnut Cake" data-desc="carrot walnut cinnamon">
@@ -118,7 +118,7 @@
     <p>Spiced carrot cake with crunchy walnuts and cream cheese frosting.</p>
     <p><strong>RM 85</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Carrot Walnut Cake" data-price="85" data-desc="carrot walnut cinnamon"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Carrot Walnut Cake" data-price="85" data-desc="carrot walnut cinnamon">Add to Cart</button>
   </article>
 
   <article class="product-card" data-name="Mocha Buttercream Cake" data-desc="mocha buttercream chocolate">
@@ -127,7 +127,7 @@
     <p>Decadent chocolate cake filled with rich mocha buttercream.</p>
     <p><strong>RM 92</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <button class="button add-to-cart" data-name="Mocha Buttercream Cake" data-price="92" data-desc="mocha buttercream chocolate"><a>Add to Cart</a></button>
+    <button class="button add-to-cart" data-name="Mocha Buttercream Cake" data-price="92" data-desc="mocha buttercream chocolate">Add to Cart</button>
   </article>
 </section>
 </main>
