--- a/checkout.html
+++ b/checkout.html
@@ -439,11 +439,22 @@
                     <label for="state">State/Province*</label>
                     <select id="state" name="state" required>
                       <option value="">Select State</option>
-                      <option value="AL">Alabama</option>
-                      <option value="AK">Alaska</option>
-                      <option value="AZ">Arizona</option>
-                      <!-- More states would be added here -->
-                      <option value="WY">Wyoming</option>
+                      <option value="JHR">Johor Darul Ta'zim</option>
+                      <option value="KDH">Kedah Darul Aman</option>
+                      <option value="KTN">Kelantan Darul Naim</option>
+                      <option value="KUL">Kuala Lumpur</option>
+                      <option value="LBN">Lanuan</option>
+                      <option value="MLK">Malacca</option>
+                      <option value="NSN">Negeri Sembilan Darul Khusus</option>
+                      <option value="PHG">Pahang Darul Makmur</option>
+                      <option value="PLS">Perlis Indera Kayangan</option>
+                      <option value="PRK">Perak Darul Ridzuan</option>
+                      <option value="PNG">Penang</option>
+                      <option value="PRA">Putrajaya</option>
+                      <option value="SGR">Selangor Darul Ehsan</option>
+                      <option value="TRG">Terengganu Darul Iman</option>
+                      <option value="SAB">Sabah</option>
+                      <option value="SAR">Sarawak</option>
                     </select>
                     <div class="error-message">Please select your state</div>
                   </div>
@@ -462,9 +473,9 @@
                   <div class="input-group">
                     <label for="country">Country*</label>
                     <select id="country" name="country" required>
-                      <option value="US" selected>United States</option>
-                      <option value="CA">Canada</option>
-                      <option value="MX">Mexico</option>
+                      <option value="MY" selected>Malaysia</option>
+                      <option value="SG">Singapore</option>
+                      <option value="IN">Indonesia</option>
                       <!-- More countries would be added here -->
                     </select>
                     <div class="error-message">Please select your country</div>
