--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="images/png" href="images/logo.png" />
   <title>About Us - BakeEase</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
