--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="images/png" href="images/logo.png" />
   <title>Login - BakeEase</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
