--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="images/png" href="images/logo.png" />
   <title>Shopping Cart - BakeEase</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
@@ -264,7 +265,7 @@
       background-color: #e67e22;
       color: white;
       border: none;
-      padding: 15px 24px;
+      padding: 15px 5px;
       border-radius: 5px;
       font-size: 16px;
       cursor: pointer;
