--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -50,8 +50,8 @@
       content: "";
       position: absolute;
       top: 15px;
-      left: 0;
-      right: 0;
+      left: 40px;
+      right: 40px; 
       height: 2px;
       background-color: #ddd;
       z-index: 1;
@@ -61,6 +61,7 @@
       text-align: center;
       position: relative;
       z-index: 2;
+      width: 100px;
     }
     
     .step-number {
