--- a/checkout.html
+++ b/checkout.html
@@ -248,8 +248,8 @@
       content: "";
       position: absolute;
       top: 15px;
-      left: 0;
-      right: 0;
+      left: 30px;
+      right: 40px;
       height: 2px;
       background-color: #ddd;
       z-index: 1;
