--- a/login.html
+++ b/login.html
@@ -244,7 +244,7 @@
         if (email === "admin@example.com" && password === "admin123") {
           e.preventDefault(); // Prevent normal submission
           alert("Welcome Admin! Redirecting to admin dashboard...");
-          window.location.href = "admin-dashboard.html"; // Replace with your actual admin page
+          window.location.href = "admin-dashboard.php"; // Replace with your actual admin page
         }
       });
     ;
