--- a/login.html
+++ b/login.html
@@ -163,6 +163,7 @@
       
       <div class="auth-links">
         <p>Don't have an account? <a href="register.html">Sign Up</a></p>
+        <p>Admin? <a href="admin-login.html">Login here</a></p>
       </div>
     </div>
   </main>
