--- a/login.html
+++ b/login.html
@@ -135,6 +135,7 @@
           <div class="dropdown-menu" id="profileMenu">
             <a href="register.html">Sign Up</a>
             <a href="login.html">Login</a>
+            <a href="admin-login.html" style="color: #e67e22; font-weight: bold;">Admin Login</a>
           </div>
         </div>
       </div>
@@ -163,7 +164,6 @@
       
       <div class="auth-links">
         <p>Don't have an account? <a href="register.html">Sign Up</a></p>
-        <p>Admin? <a href="admin-login.html">Login here</a></p>
       </div>
     </div>
   </main>
