--- a/contact.html
+++ b/contact.html
@@ -49,22 +49,134 @@
 
   <main>
     <section>
-      <form action="#" method="post">
-        <label>Name:</label><br />
-        <input type="text" name="name" required><br /><br />
+  <div class="contact-form-container">
+    <form action="#" method="post">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+      </div>
 
-        <label>Email:</label><br />
-        <input type="email" name="email" required><br /><br />
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
 
-        <label>Message:</label><br />
-        <textarea name="message" rows="4" required></textarea><br /><br />
+      <div class="form-group">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+      </div>
 
-        <input type="submit" value="Send Message">
-      </form>
-    </section>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+
+  <style>
+    .contact-form-container {
+      max-width: 500px;
+      margin: 40px auto;
+      padding: 30px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    .contact-form-container form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .form-group {
+      position: relative;
+    }
+
+    .form-group label {
+      display: block;
+      font-size: 14px;
+      font-weight: bold;
+      color: #5a3921;
+      margin-bottom: 5px;
+      transition: all 0.3s ease;
+    }
+
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 12px 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 16px;
+      color: #5a3921;
+      background-color: #f9f9f9;
+      transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .form-group textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+
+    .form-group input:focus,
+    .form-group textarea:focus {
+      outline: none;
+      border-color: #e67e22;
+      box-shadow: 0 0 5px rgba(230, 126, 34, 0.3);
+      background-color: #fff;
+    }
+
+    .form-group input:valid:not(:placeholder-shown) + label,
+    .form-group textarea:valid:not(:placeholder-shown) + label {
+      color: #e67e22;
+    }
+
+    button[type="submit"] {
+      background-color: #e67e22;
+      color: white;
+      border: none;
+      padding: 15px;
+      border-radius: 5px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    button[type="submit"]:hover {
+      background-color: #d35400;
+      transform: translateY(-2px);
+    }
+
+    button[type="submit"]:active {
+      transform: translateY(0);
+    }
+
+    button[type="submit"]:focus {
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(230, 126, 34, 0.3);
+    }
+
+    @media (max-width: 768px) {
+      .contact-form-container {
+        margin: 20px;
+        padding: 20px;
+      }
+
+      .form-group input,
+      .form-group textarea {
+        font-size: 14px;
+        padding: 10px;
+      }
+
+      button[type="submit"] {
+        font-size: 14px;
+        padding: 12px;
+      }
+    }
+  </style>
+</section>
 
     <section>
-      <h3>Find Us:</h3>
+      <h3 class="popular-heading">Find Us:</h3>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.7436995642674!2d102.2761136!3d2.2494935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d1e56b9710cf4b%3A0x66b6b12b75469278!2sMultimedia%20University!5e0!3m2!1sen!2smy!4v1746952638657!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
