--- a/admin-register.html
+++ b/admin-register.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="images/png" href="images/logo.png" />
   <title>Admin Register - BakeEase</title>
   <style>
     body {
