--- a/register.html
+++ b/register.html
@@ -16,6 +16,10 @@
       background-color: #fff;
     }
     
+    #page-heading {
+      font-size: 2rem;
+    }
+
     .form-group {
       margin-bottom: 20px;
     }
@@ -109,7 +113,7 @@
       <div class="logo-left">
         <a href="index.html">
         <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
-        <h1 id="page-heading">Create Account</h1>
+        <h1 id="page-heading">Register</h1>
       </div>
       
       <!-- Right: Nav, Cart, Profile -->
