--- a/register.html
+++ b/register.html
@@ -6,7 +6,6 @@
   <title>Register - BakeEase</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    /* Additional styles for login/register pages */
     .auth-container {
       max-width: 500px;
       margin: 40px auto;
@@ -150,7 +149,7 @@
   <main>
     <div class="auth-container">
       <h2 class="form-title">Join BakeEase Today</h2>
-      <form id="registerForm" action="process-register.php" method="post">
+      <form id="registerForm" action="login.html" method="post">
         <div class="form-row">
           <div class="form-group">
             <label for="firstName">First Name</label>
