--- a/admin-register.html
+++ b/admin-register.html
@@ -1,163 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="icon" type="images/png" href="images/logo.png" />
-  <title>Admin Register - BakeEase</title>
+  <meta charset="UTF-8" />
+  <title>Admin Registration - BakeEase</title>
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-    }
-    .container {
-      max-width: 400px;
-      margin: 80px auto;
-      background: white;
+    .auth-container {
+      max-width: 500px;
+      margin: 40px auto;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
     }
-    h2 {
+
+    .form-title {
+      font-size: 2rem;
       text-align: center;
       color: #5a3921;
+      margin-bottom: 30px;
     }
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+
+    .form-group {
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
     }
-    button {
-      width: 100%;
+
+    .form-group label {
+      display: block;
+      width: 120px;
+      margin-bottom: 0;
+      font-weight: bold;
+      color: #5a3921;
+      text-align: right;
+      margin-right: 15px;
+    }
+
+    .form-group input {
+      flex: 1;
       padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .form-actions {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .form-actions .btn-primary {
+      margin-bottom: 15px;
+    }
+
+    .form-actions .forgot-password {
+      font-size: 14px;
+      color: #e67e22;
+      text-decoration: none;
+    }
+
+    .btn-primary {
       background-color: #e67e22;
       color: white;
-      font-size: 16px;
       border: none;
-      border-radius: 6px;
+      padding: 12px 24px;
+      border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
+      transition: background-color 0.3s;
+      text-align: center;
     }
-    button:hover {
+
+    .btn-primary:hover {
       background-color: #d35400;
+      text-align: center;
+    }
+
+    .auth-links {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .auth-links a {
+      color: #e67e22;
+      text-decoration: none;
+    }
+
+    .auth-links a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-<header>
-    <div class="header-bar">
-    <!-- Logo only -->
-    <div class="logo-left">
-      <a href="index.html">
-      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
-      <h1 id="page-heading">About Our Team</h1>
-    </div>
-
-    <!-- Right: Nav, Cart, Profile -->
-    <div class="header-right">
-      <div class="nav-dropdown">
-        <span class="nav-toggle" id="navToggle">☰</span>
-        <div class="dropdown-menu" id="navMenu">
-          <a href="index.html">Home</a>
-          <a href="products.html">Products</a>
-          <a href="about.html">About Us</a>
-          <a href="contact.html">Contact</a>
-        </div>
+  <div class="auth-container">
+    <h2 class="form-title">Admin Registration</h2>
+    <form action="process-admin-register.php" method="post">
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" required placeholder="Enter your full name" />
       </div>
 
-      <div class="cart-dropdown">
-        <span class="cart-icon" id="cartToggle">🛒</span>
-        <div class="dropdown-menu" id="cartMenu">
-          <a href="shoppingCart.html">View Cart</a>
-          <a href="checkout.html">Checkout</a>
-        </div>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" required placeholder="Enter your email" />
       </div>
 
-      <div class="profile-dropdown">
-        <span class="profile-icon" id="profileToggle">👤</span>
-        <div class="dropdown-menu" id="profileMenu">
-          <a href="register.html">Sign Up</a>
-          <a href="login.html">Login</a>
-        </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required placeholder="Enter your password" />
       </div>
-    </div>
-  </div>
-  </header>
 
-  <div class="container">
-    <h2>Register Admin</h2>
-    <form action="process-admin-register.php" method="POST">
-      <input type="text" name="name" placeholder="Full Name" required />
-      <input type="email" name="email" placeholder="Email Address" required />
-      <input type="password" name="password" placeholder="Password" required />
-      <button type="submit">Register Admin</button>
+      <div class="form-group">
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirm your password" />
+      </div>
+
+      <div class="form-actions">
+        <button type="submit" class="btn-primary">Register</button>
+      </div>
     </form>
+
+    <div class="auth-links">
+      <p>Already have an account? <a href="admin-login.html">Login here</a></p>
+    </div>
   </div>
-
-  <footer>
-    <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
-  </footer>
-
-  <script>
-  const profileToggle = document.getElementById("profileToggle");
-    const profileMenu = document.getElementById("profileMenu");
-    const cartToggle = document.getElementById("cartToggle");
-    const cartMenu = document.getElementById("cartMenu");
-    const navToggle = document.getElementById("navToggle");
-    const navMenu = document.getElementById("navMenu");
-
-    // Toggle Profile Menu
-    profileToggle.addEventListener("click", () => {
-      profileMenu.style.display = (profileMenu.style.display === "block") ? "none" : "block";
-      cartMenu.style.display = "none";
-    });
-
-    // Toggle Cart Menu
-    cartToggle.addEventListener("click", () => {
-      cartMenu.style.display = (cartMenu.style.display === "block") ? "none" : "block";
-      profileMenu.style.display = "none";
-    });
-
-    navToggle.addEventListener("click", () => {
-    navMenu.style.display = (navMenu.style.display === "block") ? "none" : "block";
-  });
-
-    // Hide dropdowns when clicking outside
-    document.addEventListener("click", (e) => {
-      if (!profileToggle.contains(e.target) && !profileMenu.contains(e.target)) {
-        profileMenu.style.display = "none";
-      }
-      if (!cartToggle.contains(e.target) && !cartMenu.contains(e.target)) {
-        cartMenu.style.display = "none";
-      }
-      document.addEventListener("click", (e) => {
-      if (!navToggle.contains(e.target) && !navMenu.contains(e.target)) {
-      navMenu.style.display = "none";
-    }
-  });
-    });
-
-    toggles.forEach(({ btn, menu }) => {
-      const toggle = document.getElementById(btn);
-      const menuEl = document.getElementById(menu);
-
-      if (toggle && menuEl) {
-        toggle.addEventListener("click", (e) => {
-          e.stopPropagation();
-          menuEl.style.display = menuEl.style.display === "block" ? "none" : "block";
-        });
-      }
-    });
-
-    document.addEventListener("click", () => {
-      toggles.forEach(({ menu }) => {
-        const el = document.getElementById(menu);
-        if (el) el.style.display = "none";
-      });
-    });
-  ;
-</script>
 </body>
 </html>
