--- a/admin-login.html
+++ b/admin-login.html
@@ -165,7 +165,7 @@
   <main>
     <div class="auth-container">
       <h2 class="form-title">Hello Admin!</h2>
-      <form action="process-login.php" method="post">
+      <form action="admin-dashboard.html" method="post">
         <div class="form-group">
           <label for="email">Email Address</label>
           <input type="email" id="email" name="email" required placeholder="Enter your email" />
