--- a/admin-register.html
+++ b/admin-register.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Admin Registration - BakeEase</title>
-  <link rel="stylesheet" href="styles.css" />
   <style>
     .auth-container {
       max-width: 500px;
@@ -98,7 +97,7 @@
 <body>
   <div class="auth-container">
     <h2 class="form-title">Admin Registration</h2>
-    <form action="process-admin-register.php" method="post">
+    <form action="admin-login.html" method="post">
       <div class="form-group">
         <label for="name">Full Name</label>
         <input type="text" id="name" name="name" required placeholder="Enter your full name" />
